--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.2",
     "bulma": "^0.9.4",
-    "postcss": "^8.4.18",
     "classnames": "^2.3.1",
+    "postcss": "^8.4.18",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@cypress/webpack-dev-server": "^1.8.4",
